try some things to make create-pcf-manifest script execute and make the pcf manifest

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,8 @@ script:
 
 before_deploy:
   - mvn package -DskipTests=true
-  - ./create-pcf-manifest
+  - chmod +x create-pcf-manifest.sh
+  - ./create-pcf-manifest.sh
 
 deploy:
   provider: cloudfoundry
